[package]
name = "actix-demo"
version = "0.1.0"
authors = ["andreby42 <38912428@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.8"
time = "0.1.42"
log = "0.4.8"
env_logger = "0.7.1"
chrono = "0.4.9"


listenfd = "0.3.3"

